Tweak Compose setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,6 @@ importer:
   volumes:
     - ~/.aws:/root/.aws
     - ./data:/data
+    - ./etc/confd/templates:/etc/confd/templates
   env_file:
     - ./.env
